--- a/about/templates/openabout.html
+++ b/about/templates/openabout.html
@@ -4,7 +4,8 @@
 
 {% block content %}
 
-<section data-aos="fade-up" class="mt-5" id="About">
+
+<div data-bs-spy data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-offset="0" class="scrollspy-example" tabindex="0">
     <div class="container about text-center">
       <div class="text-1 text-black">
         <h2 class="display-4 about-us">About</h2>
@@ -18,6 +19,6 @@
         </div>
       </div>
     </div>
-  </section>
+</div>
 
 {% endblock %}
