--- a/courses/templates/opencourses.html
+++ b/courses/templates/opencourses.html
@@ -4,52 +4,127 @@
 
 {% block content %}
 
-<section id="carousel">
-    <div class="container-fluid py-3 contain-event">
-      <div class="container contain-event-card py-3">
-        <br /><br /><br /><br />
-        <h4>OUR COURSES</h4>
-        <div class="bars-2"></div>
-        <div class="swiper mySwiper">
-          <div class="swiper-wrapper">
-            <!-- card 1 -->
-            <div class="card p-2 swiper-slide text-center dayEnglish">
-              <img src="/static/img/logo.png" class="card-img-top dayEnglish-img" alt="..." />
-              <div class="card-body">
-                <h5 class="card-title title-21day-carousel"><i class="fa-solid fa-calendar-days"></i> : Coming Soon</h5>
-                <a href="#about-event" class="btn btn-dark btn-sm fw-bold more-info" style="width: 6rem">More Info</a>
-              </div>
-            </div>
-
-            <!-- card 2 -->
-            <div class="card p-2 swiper-slide text-center comingSoon">
-              <div class="card-body">
-                <h3 class="card-title comingSoon-txt">COMING SOON</h3>
-              </div>
-            </div>
-
-            <!-- card 3 -->
-            <div class="card p-2 swiper-slide text-center comingSoon">
-              <div class="card-body">
-                <h3 class="card-title comingSoon-txt">COMING SOON</h3>
-              </div>
-            </div>
-
-            <!-- card 4 -->
-            <div class="card p-2 swiper-slide text-center comingSoon">
-              <div class="card-body">
-                <h3 class="card-title comingSoon-txt">COMING SOON</h3>
+    <div class="line" data-aos="flip-up">
+      <div class="team text-center text-strong">
+        <h2>OUR COURSES</h2>
+      </div>
+    </div>
+    <div class="display-4 pro-text text-center">
+      <div class="container executive">
+        <div class="row">
+          <div class="col-lg-4" data-aos="fade-right">
+            <div class="card card-team-profile">
+              <img src="/static/img/bilbul.jpg" class="card-img-top rounded-circle" alt="..." />
+              <div class="card-body card-bd">
+                <h5 class="card-title">Bilangan Bulat</h5>
+                <h6>SMP Kelas 7</h6>
+                <div class="bars-1"></div>
+                <ul class="text-start">
+                  <li>Bilangan bulat terdiri dari bilangan cacah dan bilangan bulat negatif. Himpunan bilangan bulat dalam matematika dilambangkan dengan Z.</li>
+                </ul>
+                <div class="sosial-media">
+                  <a href=" https://youtu.be/G5t6-bH02zg" class="text-white" target="_blank" rel="noreferrer noopener"><i class="fa-brands fa-1x fa-youtube"></i></a>
+                </div>
               </div>
             </div>
           </div>
-          <!-- <div class="swiper-button-next"></div>
-        <div class="swiper-button-prev"></div> -->
-          <div class="swiper-pagination"></div>
+
+          <div class="col-lg-4" data-aos="fade-left">
+            <div class="card card-team-profile">
+              <img src="/static/img/pecahan.png" class="card-img-top rounded-circle" alt="..." />
+              <div class="card-body card-bd">
+                <h5 class="card-title">Pecahan</h5>
+                <h6>SMP Kelas 7</h6>
+                <div class="bars-1"></div>
+                <ul class="text-start">
+                  <li>Pengertian dari bilangan pecahan adalah bagian dari satu keseluruhan dari suatu kuantitas tertentu.</li>
+                </ul>
+                <div class="sosial-media">
+                  <a href="https://youtu.be/hiprF2LY1Og" class="text-white" target="_blank" rel="noreferrer noopener"><i class="fa-brands fa-1x fa-youtube"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4" data-aos="fade-left">
+            <div class="card card-team-profile">
+              <img src="/static/img/statistika.jpg" class="card-img-top rounded-circle" alt="..." />
+              <div class="card-body card-bd">
+                <h5 class="card-title">Statistika</h5>
+                <h6>SMP Kelas 9</h6>
+                <div class="bars-1"></div>
+                <ul class="text-start">
+                  <li>Statistika adalah sebuah ilmu yang mempelajari bagaimana cara merencanakan, mengumpulkan, menganalisis, lalu menginterpretasikan, dan akhirnya mempresentasikan data.</li>
+                </ul>
+                <div class="sosial-media">
+                  <a href="https://youtu.be/vMbCKm3HSuQ" class="text-white" target="_blank" rel="noreferrer noopener"><i class="fa-brands fa-1x fa-youtube"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
-  </section>
-  <hr size="5" width="200rem" style="margin: 0 auto" />
+    
+  <!-- end courses -->
 
+   <!-- courses -->
+    <div class="display-4 pro-text text-center">
+      <div class="container executive">
+        <div class="row">
+          <div class="col-lg-4" data-aos="fade-right">
+            <div class="card card-team-profile">
+              <img src="/static/img/geometri.jpg" class="card-img-top rounded-circle" alt="..." />
+              <div class="card-body card-bd">
+                <h5 class="card-title">Geometri</h5>
+                <h6>SMA Kelas 10</h6>
+                <div class="bars-1"></div>
+                <ul class="text-start">
+                  <li>Geometri, ilmu ukur, atau ilmu bangun adalah cabang matematika yang bersangkutan dengan pertanyaan bentuk, ukuran, posisi relatif gambar, dan sifat ruang.</li>
+                </ul>
+                <div class="sosial-media">
+                  <a href="https://youtu.be/tl2XtGQJBpE" class="text-white" target="_blank" rel="noreferrer noopener"><i class="fa-brands fa-1x fa-youtube"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4" data-aos="fade-left">
+            <div class="card card-team-profile">
+              <img src="/static/img/trigonometri.png" class="card-img-top rounded-circle" alt="..." />
+              <div class="card-body card-bd">
+                <h5 class="card-title">Trigonometri</h5>
+                <h6>SMA Kelas 11</h6>
+                <div class="bars-1"></div>
+                <ul class="text-start">
+                  <li>Trigonometri adalah ilmu Matematika yang mempelajari tentang sudut, sisi, dan perbandingan antara sudut dan sisi.</li>
+                </ul>
+                <div class="sosial-media">
+                  <a href="https://youtu.be/8A6pMt553rI" class="text-white" target="_blank" rel="noreferrer noopener"><i class="fa-brands fa-1x fa-youtube"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4" data-aos="fade-left">
+            <div class="card card-team-profile">
+              <img src="/static/img/matriks.png" class="card-img-top rounded-circle" alt="..." />
+              <div class="card-body card-bd">
+                <h5 class="card-title">Matriks</h5>
+                <h6>SMA Kelas 12</h6>
+                <div class="bars-1"></div>
+                <ul class="text-start">
+                  <li>Matriks adalah kumpulan bilangan, simbol, atau ekspresi yang disusun membentuk persegi panjang berdasarkan baris dan kolom.</li>
+                </ul>
+                <div class="sosial-media">
+                  <a href="https://youtu.be/hlh60xenNHE" class="text-white" target="_blank" rel="noreferrer noopener"><i class="fa-brands fa-1x fa-youtube"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    
 
 {% endblock %}
