--- a/home/templates/openhome.html
+++ b/home/templates/openhome.html
@@ -11,7 +11,7 @@
         <img src="/static/img/Logo.png" alt="Math Space" />
         <p class="lead">Develop Math skills & academic</p>
       </div>
-      <a href="#About" role="button" class="btn btn-j"> Learn More </a>
+      <a href="/About" role="button" class="btn btn-j"> Learn More </a>
     </div>
     <!-- End Jumbotron -->
 
@@ -61,7 +61,7 @@
               </div>
             </div>
 
-            <div class="col-lg-4" data-aos="fade-left">
+            <div class="col-lg-4" data-aos="fade-center">
               <div class="card card-team-profile">
                 <img src="/static/img/salmia.jpg" class="card-img-top rounded-circle" alt="..." />
                 <div class="card-body card-bd">
@@ -94,11 +94,11 @@
                   </div>
                 </div>
               </div>
-              <div class="col-lg-4" data-aos="fade-up-right">
+              <div class="col-lg-4" data-aos="fade-up-left">
                 <div class="card card-team-profile">
                   <img src="/static/img/Uyun.jpg" class="card-img-top rounded-circle" alt="..." />
                   <div class="card-body card-bd">
-                    <h5 class="card-title">Roudhotul Uyun</h5>
+                    <h5 class="card-title">Roudotul Uyun</h5>
                     <h6>NIM. 2225210053</h6>
                     <div class="bars-1"></div>
                     <ul class="text-start">
@@ -117,76 +117,195 @@
       </div>
       
     <!-- end profile -->
-    <!-- courses -->
-    <section id="courses">
-      <div class="container-fluid py-3 contain-event">
-        <div class="container contain-event-card py-3">
-          <br /><br /><br /><br />
-          <h4>OUR COURSES</h4>
-          <div class="bars-2"></div>
-          <div class="swiper mySwiper">
-            <div class="swiper-wrapper">
-              <!-- card 1 -->
-              <div class="card p-2 swiper-slide text-center dayEnglish">
-                <img src="/static/img/logo.png" class="card-img-top dayEnglish-img" alt="..." />
-                <div class="card-body">
-                  <h5 class="card-title title-21day-courses"><i class="fa-solid fa-calendar-days"></i> : Coming Soon</h5>
-                  <a href="#about-event" class="btn btn-dark btn-sm fw-bold more-info" style="width: 6rem">More Info</a>
-                </div>
-              </div>
-
-              <!-- card 2 -->
-              <div class="card p-2 swiper-slide text-center comingSoon">
-                <div class="card-body">
-                  <h3 class="card-title comingSoon-txt">COMING SOON</h3>
-                </div>
-              </div>
-
-              <!-- card 3 -->
-              <div class="card p-2 swiper-slide text-center comingSoon">
-                <div class="card-body">
-                  <h3 class="card-title comingSoon-txt">COMING SOON</h3>
-                </div>
-              </div>
-
-              <!-- card 4 -->
-              <div class="card p-2 swiper-slide text-center comingSoon">
-                <div class="card-body">
-                  <h3 class="card-title comingSoon-txt">COMING SOON</h3>
+  <!-- courses -->
+  <section id="courses">
+    <div class="line" data-aos="flip-up">
+      <div class="team text-center text-strong">
+        <h2>OUR COURSES</h2>
+      </div>
+    </div>
+    <div class="display-4 pro-text text-center">
+      <div class="container executive">
+        <div class="row">
+          <div class="col-lg-4" data-aos="fade-right">
+            <div class="card card-team-profile">
+              <img src="/static/img/bilbul.jpg" class="card-img-top rounded-circle" alt="..." />
+              <div class="card-body card-bd">
+                <h5 class="card-title">Bilangan Bulat</h5>
+                <h6>SMP Kelas 7</h6>
+                <div class="bars-1"></div>
+                <ul class="text-start">
+                  <li>Bilangan bulat terdiri dari bilangan cacah dan bilangan bulat negatif. Himpunan bilangan bulat dalam matematika dilambangkan dengan Z.</li>
+                </ul>
+                <div class="sosial-media">
+                  <a href=" https://youtu.be/G5t6-bH02zg" class="text-white" target="_blank" rel="noreferrer noopener"><i class="fa-brands fa-1x fa-youtube"></i></a>
                 </div>
               </div>
             </div>
-            <!-- <div class="swiper-button-next"></div>
-          <div class="swiper-button-prev"></div> -->
-            <div class="swiper-pagination"></div>
+          </div>
+
+          <div class="col-lg-4" data-aos="fade-left">
+            <div class="card card-team-profile">
+              <img src="/static/img/pecahan.png" class="card-img-top rounded-circle" alt="..." />
+              <div class="card-body card-bd">
+                <h5 class="card-title">Pecahan</h5>
+                <h6>SMP Kelas 7</h6>
+                <div class="bars-1"></div>
+                <ul class="text-start">
+                  <li>Pengertian dari bilangan pecahan adalah bagian dari satu keseluruhan dari suatu kuantitas tertentu.</li>
+                </ul>
+                <div class="sosial-media">
+                  <a href="https://youtu.be/hiprF2LY1Og" class="text-white" target="_blank" rel="noreferrer noopener"><i class="fa-brands fa-1x fa-youtube"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4" data-aos="fade-left">
+            <div class="card card-team-profile">
+              <img src="/static/img/statistika.jpg" class="card-img-top rounded-circle" alt="..." />
+              <div class="card-body card-bd">
+                <h5 class="card-title">Statistika</h5>
+                <h6>SMP Kelas 9</h6>
+                <div class="bars-1"></div>
+                <ul class="text-start">
+                  <li>Statistika adalah sebuah ilmu yang mempelajari bagaimana cara merencanakan, mengumpulkan, menganalisis, lalu menginterpretasikan, dan akhirnya mempresentasikan data.</li>
+                </ul>
+                <div class="sosial-media">
+                  <a href="https://youtu.be/vMbCKm3HSuQ" class="text-white" target="_blank" rel="noreferrer noopener"><i class="fa-brands fa-1x fa-youtube"></i></a>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
-    </section>
-    <hr size="5" width="200rem" style="margin: 0 auto" />
-  
+    </div>
+    
+  <!-- end courses -->
 
+   <!-- courses -->
+    <div class="display-4 pro-text text-center">
+      <div class="container executive">
+        <div class="row">
+          <div class="col-lg-4" data-aos="fade-right">
+            <div class="card card-team-profile">
+              <img src="/static/img/geometri.jpg" class="card-img-top rounded-circle" alt="..." />
+              <div class="card-body card-bd">
+                <h5 class="card-title">Geometri</h5>
+                <h6>SMA Kelas 10</h6>
+                <div class="bars-1"></div>
+                <ul class="text-start">
+                  <li>Geometri, ilmu ukur, atau ilmu bangun adalah cabang matematika yang bersangkutan dengan pertanyaan bentuk, ukuran, posisi relatif gambar, dan sifat ruang.</li>
+                </ul>
+                <div class="sosial-media">
+                  <a href="https://youtu.be/tl2XtGQJBpE" class="text-white" target="_blank" rel="noreferrer noopener"><i class="fa-brands fa-1x fa-youtube"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4" data-aos="fade-left">
+            <div class="card card-team-profile">
+              <img src="/static/img/trigonometri.png" class="card-img-top rounded-circle" alt="..." />
+              <div class="card-body card-bd">
+                <h5 class="card-title">Trigonometri</h5>
+                <h6>SMA Kelas 11</h6>
+                <div class="bars-1"></div>
+                <ul class="text-start">
+                  <li>Trigonometri adalah ilmu Matematika yang mempelajari tentang sudut, sisi, dan perbandingan antara sudut dan sisi.</li>
+                </ul>
+                <div class="sosial-media">
+                  <a href="https://youtu.be/8A6pMt553rI" class="text-white" target="_blank" rel="noreferrer noopener"><i class="fa-brands fa-1x fa-youtube"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4" data-aos="fade-left">
+            <div class="card card-team-profile">
+              <img src="/static/img/matriks.png" class="card-img-top rounded-circle" alt="..." />
+              <div class="card-body card-bd">
+                <h5 class="card-title">Matriks</h5>
+                <h6>SMA Kelas 12</h6>
+                <div class="bars-1"></div>
+                <ul class="text-start">
+                  <li>Matriks adalah kumpulan bilangan, simbol, atau ekspresi yang disusun membentuk persegi panjang berdasarkan baris dan kolom.</li>
+                </ul>
+                <div class="sosial-media">
+                  <a href="https://youtu.be/hlh60xenNHE" class="text-white" target="_blank" rel="noreferrer noopener"><i class="fa-brands fa-1x fa-youtube"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    
+  <!-- end courses -->
+  
+  <!--contact-->
+<br><br><br><br><br>
+  <section id="contact">
+  <div class="container">
+    <div class="card-container">
+            <div class="container">
+                <form action="">
+                    <h2>Hubungi Kami</h2>
+                    <p><input type="text" placeholder="Nama"></p>
+                    <p><input type="email" placeholder="Alamat Email"></p>
+                    <p><input type="text" placeholder="Alamat"></p>
+                    <p><input type="phone" placeholder="Telephone"></p>
+                    <p><textarea rows="10" placeholder="Pesan"></textarea></p>
+                    <button>Kirim</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+
+<br>
+<div class="welcome" style="text-align:center">
+ 
+    <br><br>
+
+    <section class="service">
+        <div class="isi" style="color:white;margin:0 20px">
+
+            <h2 style="font-size:50px" style="font-family: 'Nerko'"><b>DreamCourses</b></h2>
+            <span>Bimbingan Belajar Online Berkualitas</span>
+
+            <br><br>
+            <span><img src="/static/img/logowa.png" alt="Image" height="50" width="50">
+                <h6 style="color:black">Whatsapp</h6></span>
+                <span><img src="/static/img/logoig.png" alt="Image" height="50" width="70"> 
+                <h6 style="color:black">Instagram</h6></span>
+            <span><img src="/static/img/logotwit2.png" alt="Image" height="40" width="40">
+                <h6 style="color:black">Twitter</h6></span>
+        </div>
+    </section>
+</div>
+</div>
+</div>
+    
   <!-- footer -->
   <footer id="footer">
     <div class="container-fluid">
       <div class="row">
-        <div class="col-md-7 col-xs-6 footer-left">
+        <div class="col-md-3 col-xs-5 footer-left">
           <img src="/static/img/logo2.png" alt="" class="ESFooter text-center" width="100px" />
           <p class="mt-2 title-footer">Develop Math Skills & Academic</p>
           <br />
           <a href="https://www.instagram.com/salmiaasbl/" target="_blank" rel="noreferrer noopener" class="m-2"><i class="fa-brands fa-instagram fa-2xl"></i></a>
           <a href="https://wa.me/6285880222542" target="_blank" rel="noreferrer noopener" class="m-2"><i class="fa-brands fa-whatsapp fa-2xl"></i></a>
-        </div>
-        <div class="col-md-5 col-xs-6 footer-right">
-          <p>mathspace@gmail.com<br /><strong>(+62) 858 8022 2542</strong></p>
-
-
-          <br />
+          <br><br><br>
+          <p>mathspace@gmail.com</p>
+          <p><strong>(+62)85880222542</strong></p>
         </div>
       </div>
     </div>
   </footer>
   <!-- end footer -->
+
 
   <!-- Option 1: Bootstrap Bundle with Popper -->
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
