--- a/siswa/templates/registsiswa.html
+++ b/siswa/templates/registsiswa.html
@@ -6,6 +6,14 @@
     <div class="alert alert-success">{{ pesan }}</div>
 {% endif %}
 
+<p>.</p>
+<p>.</p>
+<p>.</p>
+<p>.</p>
+
+
+<h1><center>Registrasi</center></h1>
+
 <form action="/registsiswa/" method="post">
     {% csrf_token %}
 
