--- a/templates/navigasi.html
+++ b/templates/navigasi.html
@@ -39,16 +39,11 @@
         </button>
         <div class="collapse navbar-collapse bg-light" id="navbarNavAltMarkup">
           <div class="navbar-nav ms-auto">
-            <a class="nav-link" aria-current="page" href="#home">Home</a>
+            <a class="nav-link" aria-current="page" href="/home">Home</a>
             <a class="nav-link" href="#About">About</a>
             <a class="nav-link" href="#courses">Courses</a>
-            <a class="nav-link" href="https://www.instagram.com/nafsulmth/" id="">Contact us</a>
-            <a class="nav-link" href="#login">Login
-              <a><ul class="dropdown">
-                <li><a href="">Guru</a></li>
-                <li><a href="">Siswa</a></li>
-              </ul></a>
-            </a>
+            <a class="nav-link" href="#contact" id="">Contact us</a>
+            <a class="nav-link" href="/login">Login</a>
           </div>
         </div>
       </div>
@@ -56,3 +51,4 @@
   <div data-bs-spy data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-offset="0" class="scrollspy-example" tabindex="0"></div>
 </head>>
     <!-- end navbar -->
+
